fix: improve the branded background image loading speed